fix: remove scrollbar in responsive

--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ dialog {
 }
 
 .section_dialog {
-    width: fit-content;
     height: calc(768px - (64px + 64px));
     display: flex;
     justify-content: center;
@@ -158,23 +157,16 @@ button {
     align-items: center;
 }
 
+/* RESPONSIVE */
 @media (max-width: 824px) {
     dialog {
         max-width: 80vh;
-    }
-
-    .dialog_image {
-        width: 80vh;
     }
 }
 
 @media (max-width: 715px) {
     dialog {
         max-width: 70vh;
-    }
-
-    .dialog_image {
-        width: 70vh;
     }
 }
 
@@ -187,10 +179,6 @@ button {
         width: 68px;
         height: 68px;
     }
-
-    .dialog_image {
-        width: 60vh;
-    }
 }
 
 @media (max-width: 540px) {
@@ -202,10 +190,6 @@ button {
         align-items: center;
     }
 
-    .dialog_image {
-        width: 50vh;
-    }
-
     h2 {
         font-size: 18px;
     }
@@ -214,16 +198,25 @@ button {
 @media (max-width: 475px) {
     dialog {
         width: 40vh;
+        height: 624px;
+    }
+
+    .section_dialog {
+        height: calc(620px - (64px + 64px));
     }
 
     .dialog_image {
-        width: 40vh;
+        max-height: 500px;
     }
 }
 
 @media (max-width: 400px) {
     dialog {
         width: 30vh;
+    }
+
+    .section_dialog {
+        height: calc(624px - (64px + 64px));
     }
 
     .dialog_image {
